Blender crashes when change screen layout to "Motion Tracking" #37907

Closed
opened 2013-12-21 13:17:08 +01:00 by Vicens Juan Tomàs Montserrat · 6 comments

System Information
Kubuntu Linux 13.10 64 bits
NVIDIA Geforce GTX 560 Ti. Drivers: 331.20

Blender Version
Broken: Blender 2.69.7 9bd3a22 (buildbot)
Worked: Blender 2.69

Short description of error
Blender crashes when change screen layout to "Motion Tracking". Segmentation fault.
Others layouts works well.

Exact steps for others to reproduce the error
0. Open blender

  1. Change screen layout to "Motion Tracking" (top combobox)
  2. Blender crashes

Crash textfile output:

Blender 2.69 (sub 7), Commit date: 2013-12-20 23:20, Hash 9bd3a22

backtrace

/soft/blender/blender() [0xfb7ac1]
/soft/blender/blender() [0xfb7d17]
/lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f8b91d34ff0]
/soft/blender/blender(BKE_tracking_object_get_active+0) [0x1626900]
/soft/blender/blender() [0x11f20ba]
/soft/blender/blender(clip_draw_cache_and_notes+0x4c) [0x11f4fac]
/soft/blender/blender() [0x11e2e24]
/soft/blender/blender(ED_region_do_draw+0x855) [0x127c1e5]
/soft/blender/blender(wm_draw_update+0x596) [0xfd09f6]
/soft/blender/blender(WM_main+0x28) [0xfbf298]
/soft/blender/blender(main+0x4fc) [0xfba2fd]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f8b91d1fde5]
/soft/blender/blender() [0xed40b5]

GDB output:
(gdb) run
Starting program: /soft/blender/blender
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fffeebff700 (LWP 4986)]
[New Thread 0x7fffee3fe700 (LWP 4987)]
[New Thread 0x7fffedbfd700 (LWP 4988)]
[New Thread 0x7fffed3fc700 (LWP 4989)]
connect failed: No such file or directory
Read new prefs: /home/vjuan/.config/blender/2.69/config/userpref.blend
[New Thread 0x7fffebfff700 (LWP 4990)]
[Thread 0x7fffebfff700 (LWP 4990) exited]
[New Thread 0x7fffebfff700 (LWP 4991)]
[New Thread 0x7fffe6ffe700 (LWP 4992)]
[New Thread 0x7fffe67fd700 (LWP 4993)]
[Thread 0x7fffe67fd700 (LWP 4993) exited]
found bundled python: /soft/blender/2.69/python

Program received signal SIGSEGV, Segmentation fault.
0x0000000001626900 in BKE_tracking_object_get_active ()

**System Information** Kubuntu Linux 13.10 64 bits NVIDIA Geforce GTX 560 Ti. Drivers: 331.20 **Blender Version** Broken: Blender 2.69.7 9bd3a22 (buildbot) Worked: Blender 2.69 **Short description of error** Blender crashes when change screen layout to "Motion Tracking". Segmentation fault. Others layouts works well. **Exact steps for others to reproduce the error** 0. Open blender 1. Change screen layout to "Motion Tracking" (top combobox) 2. Blender crashes Crash textfile output: # Blender 2.69 (sub 7), Commit date: 2013-12-20 23:20, Hash 9bd3a22 # backtrace /soft/blender/blender() [0xfb7ac1] /soft/blender/blender() [0xfb7d17] /lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f8b91d34ff0] /soft/blender/blender(BKE_tracking_object_get_active+0) [0x1626900] /soft/blender/blender() [0x11f20ba] /soft/blender/blender(clip_draw_cache_and_notes+0x4c) [0x11f4fac] /soft/blender/blender() [0x11e2e24] /soft/blender/blender(ED_region_do_draw+0x855) [0x127c1e5] /soft/blender/blender(wm_draw_update+0x596) [0xfd09f6] /soft/blender/blender(WM_main+0x28) [0xfbf298] /soft/blender/blender(main+0x4fc) [0xfba2fd] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f8b91d1fde5] /soft/blender/blender() [0xed40b5] GDB output: (gdb) run Starting program: /soft/blender/blender [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1". [New Thread 0x7fffeebff700 (LWP 4986)] [New Thread 0x7fffee3fe700 (LWP 4987)] [New Thread 0x7fffedbfd700 (LWP 4988)] [New Thread 0x7fffed3fc700 (LWP 4989)] connect failed: No such file or directory Read new prefs: /home/vjuan/.config/blender/2.69/config/userpref.blend [New Thread 0x7fffebfff700 (LWP 4990)] [Thread 0x7fffebfff700 (LWP 4990) exited] [New Thread 0x7fffebfff700 (LWP 4991)] [New Thread 0x7fffe6ffe700 (LWP 4992)] [New Thread 0x7fffe67fd700 (LWP 4993)] [Thread 0x7fffe67fd700 (LWP 4993) exited] found bundled python: /soft/blender/2.69/python Program received signal SIGSEGV, Segmentation fault. 0x0000000001626900 in BKE_tracking_object_get_active ()

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @VicencJuanTomasMonserrat

Added subscriber: @VicencJuanTomasMonserrat
Sergey Sharybin self-assigned this 2013-12-21 15:21:21 +01:00

This issue was referenced by blender/blender-addons-contrib@b9d732e047

This issue was referenced by blender/blender-addons-contrib@b9d732e0472388460880c26ff4d503daac374ab1

This issue was referenced by b9d732e047

This issue was referenced by b9d732e0472388460880c26ff4d503daac374ab1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b9d732e047.

Closed by commit b9d732e047.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37907
No description provided.