Fix T37907: Crash when change screen layout to "Motion Tracking"

Was a bug in recent change from my own.

Also fixed cache line being displayed twice.